refactor: update dev commands